Fix display border alignment with top of window

--- a/src/styles/displayStyle.scss
+++ b/src/styles/displayStyle.scss
@@ -3,10 +3,9 @@
   display: flex;
   flex-direction: column;
   margin-left: 300px;
-  border: 2px solid rgb(82, 75, 73);
   width: 100vw;
-  max-height: 1000px;
-  max-width: 1500px;
+  margin-top: auto;
+  margin-bottom: auto;
 
   .display-top {
     flex: 1;
@@ -148,5 +147,28 @@
         border-radius: 1rem;
       }
     }
+  }
+}
+
+@media (min-width: 769px) and (orientation: landscape) {
+  .display-frame {
+    // background-color: brown;
+    > div {
+      top: 0;
+      // margin-top: 1rem;
+      // position: fixed;
+    }
+    // position: absolute;
+    // margin: 0;
+    // width: 100%;
+    // top: 60px;
+
+    // .display-top {
+    //   flex-direction: column;
+    //   align-items: center;
+    //   .hero-image {
+    //     border-radius: 1rem;
+    //   }
+    // }
   }
 }
